--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <p>Aura</p>
     <ul>
         <li>Coffee</li>
-        <li>Tea</li>
-        <li>Milk</li>
+        <li>video games</li>
+        <li>sofa</li>
     </ul>
 </body>
 </html>
