updating my webpage

--- a/index.html
+++ b/index.html
@@ -3,16 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AURA</title>
+    <title>Challenge 1</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>Aura</h1>
-    <p>Aura</p>
+    <h1>Aura Vivar</h1>
+    <p>This is my topic sentence. This is going to be like a mini paragraphy similar to the 
+        one in the challenge 1 photo. Not sure what else to put here. Hopefully this works out. 
+    </p>
     <ul>
         <li>Coffee</li>
         <li>video games</li>
         <li>sofa</li>
     </ul>
+
+
+
+
+<table>
+  <tr>
+    <th>Age</th>
+    <th>Name</th> 
+    <th>Email</th>
+  </tr>
+  <tr>
+    <td>20</td>
+    <td>Aura</td>
+    <td>auravivar@yahoo.com</td>
+  </tr>
+  <tr>
+    <td>20</td>
+    <td>Nice Nice</td>
+    <td>aurangechicken@gmail.com</td>
+  </tr>
+  <tr>
+    <td>19</td>
+    <td>Ellie</td>
+    <td>Ellie@tlou.com</td>
+  </tr>
+</table>
+
 </body>
+</html>
 </html>
